force-app/main/default/objects/Divestiture_Site__c/fields/Site_Stage__c.field-meta.xml
<CustomField>
    <fullName>Site_Stage__c</fullName>
    <label>RF Shutdown Site Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No RF Shutdown Date</fullName>
            </value>
            <value>
                <fullName>270 Days + Before RF Shutdown Date</fullName>
            </value>
            <value>
                <fullName>180 - 270 Days Before RF Shutdown Date</fullName>
            </value>
            <value>
                <fullName>120 - 179 Days Before RF Shutdown Date</fullName>
            </value>
            <value>
                <fullName>60 - 119 Days Before RF Shutdown Date</fullName>
            </value>
            <value>
                <fullName>0 - 59 Days Before RF Shutdown Date</fullName>
            </value>
            <value>
                <fullName>Late</fullName>
            </value>
            <value>
                <fullName>RF Shutdown Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>