force-app/main/default/objects/Divestiture_Site__c/fields/Site_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Status__c</fullName>
    <inlineHelpText>Updated via a process from the Macro Site Record.</inlineHelpText>
    <label>Site Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>