force-app/main/default/objects/Divestiture_Site__c/fields/Sprint_S_Tmobile_T__c.field-meta.xml
<CustomField>
    <fullName>Sprint_S_Tmobile_T__c</fullName>
    <inlineHelpText>Legacy Network.</inlineHelpText>
    <label>Sprint (S) / Tmobile (T)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>