force-app/main/default/objects/Divestiture_Site__c/fields/Structure_Category__c.field-meta.xml
<CustomField>
    <fullName>Structure_Category__c</fullName>
    <label>Structure Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>