force-app/main/default/objects/Divestiture_Site__c/fields/Structure_Type__c.field-meta.xml
<CustomField>
    <fullName>Structure_Type__c</fullName>
    <label>Structure Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>