force-app/main/default/objects/Divestiture_Site__c/fields/White_Glove__c.field-meta.xml
<CustomField>
    <fullName>White_Glove__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Special Handling Required- Check this box to update and clearly identify across the Divest Program all records that require White Glove Escalation &amp; Handling.</inlineHelpText>
    <label>White Glove</label>
    <type>Checkbox</type>
</CustomField>