force-app/main/default/objects/Divestiture_Site__c/fields/X180_Day_Physical_Shutdown_Warning__c.field-meta.xml
<CustomField>
    <fullName>X180_Day_Physical_Shutdown_Warning__c</fullName>
    <formula>IF( AND( ( Physical_Decommsion_Date_from_Source_Sys__c - TODAY()) &gt; 180 ,
( Physical_Decommsion_Date_from_Source_Sys__c - TODAY()) &lt; 210),
TRUE,
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Box is checked if the forecasted Physical Decom date is less than 210 days away and more than 180 days away. Warns that a site is approaching Physical Shutdown Locking date.</inlineHelpText>
    <label>180 Day Physical Shutdown Warning</label>
    <type>Checkbox</type>
</CustomField>