force-app/main/default/objects/Divestiture_Site__c/fields/X180_Day_RF_Shutdown_Warning__c.field-meta.xml
<CustomField>
    <fullName>X180_Day_RF_Shutdown_Warning__c</fullName>
    <formula>IF( AND(  (Forecasted_Logical_Decommission_Date__c  - TODAY())  &gt;  180 ,
 (Forecasted_Logical_Decommission_Date__c  - TODAY()) &lt; 240), 
TRUE,
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Box is checked if the forecasted RF Shutdown date  is less than 240 days away and more than 180 days away.  Warns that a site is approaching RF Date Lockdown.</inlineHelpText>
    <label>180 Day RF Shutdown Warning</label>
    <type>Checkbox</type>
</CustomField>