force-app/main/default/objects/Divestiture_Site__c/fields/X180_Days_Before_Decomm__c.field-meta.xml
<CustomField>
    <fullName>X180_Days_Before_Decomm__c</fullName>
    <formula>Physical_Decommsion_Date_from_Source_Sys__c  -180</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date that is 180 days prior to the forecasted decommissioning date of the site from the source systems.</inlineHelpText>
    <label>180 Days Before Decom</label>
    <type>Date</type>
</CustomField>