force-app/main/default/objects/Divestiture_Site__c/fields/X180_days_RF_Shutdown_Notice__c.field-meta.xml
<CustomField>
    <fullName>X180_days_RF_Shutdown_Notice__c</fullName>
    <formula>IF(  TODAY()  &gt; Forecasted_Logical_Decommission_Date__c -180, 
(Forecasted_Logical_Decommission_Date__c  - 180), 
NUll)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date that is 180 days before the  RF Shutdown Date Notice. This is blank once the 180 day lock period has been reached..</inlineHelpText>
    <label>180 Days Before RF Shutdown</label>
    <type>Date</type>
</CustomField>