force-app/main/default/objects/Divestiture_Site__c/fields/X5_Year_Forecast__c.field-meta.xml
<CustomField>
    <fullName>X5_Year_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Site was included on the orginal 5 Year Forecast</inlineHelpText>
    <label>5 Year Forecast</label>
    <type>Checkbox</type>
</CustomField>