force-app/main/default/objects/Divestiture_Site__c/fields/X800_MHz__c.field-meta.xml
<CustomField>
    <fullName>X800_MHz__c</fullName>
    <label>800 MHz</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>