force-app/main/default/objects/Divestiture_Site__c/fields/Xcaliber_Site__c.field-meta.xml
<CustomField>
    <fullName>Xcaliber_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for W-000428</description>
    <label>Xcaliber Site</label>
    <type>Checkbox</type>
</CustomField>